Bug 233380 - Changes to messages on disk not propagated to KMail
Summary: Changes to messages on disk not propagated to KMail
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Maildir Resource (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-04-05 18:21 UTC by Thomas McGuire
Modified: 2011-09-27 06:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-04-05 18:21:32 UTC
I manually changed a message in ~/.local/share/.local-mail.directory/drafts/new.
After restarting Akonadi, KMail still displayed the old message content, it must have cached it somewhere.
Akonadi should not cache the full message for the maildir resource.

This bug means that KMail can't inter-operate with other applications that might change the maildir structure.
Comment 1 András Manţia 2011-09-16 08:17:07 UTC
Git commit 994acace9204750714ee5ce9ab561d67c646d841 by Andras Mantia.
Committed on 16/09/2011 at 10:15.
Pushed by amantia into branch 'master'.

Make the maildir resource more standard compliant:
- regarding file names (233379)
- moving out files from new to cur (233378)
- storing flags
- reading flags from filenames (252449)

BUG: 233380
BUG: 233378
BUG: 252449

M  +1    -1    resources/maildir/CMakeLists.txt
M  +1    -1    resources/maildir/libmaildir/CMakeLists.txt
M  +78   -3    resources/maildir/libmaildir/maildir.cpp
M  +12   -0    resources/maildir/libmaildir/maildir.h
M  +20   -2    resources/maildir/maildirresource.cpp
M  +6    -0    resources/maildir/retrieveitemsjob.cpp

http://commits.kde.org/kdepim-runtime/994acace9204750714ee5ce9ab561d67c646d841
Comment 2 András Manţia 2011-09-16 08:28:03 UTC
Closed by mistake.
Comment 3 András Manţia 2011-09-16 15:06:28 UTC
Git commit 044d1c55f09f41574d98cae1d1107651055fa7e2 by Andras Mantia.
Committed on 16/09/2011 at 17:03.
Pushed by amantia into branch 'master'.

Monitor file changes as well, not just directory changes.

BUG: 233380

M  +0    -1    resources/maildir/libmaildir/maildir.cpp
M  +114  -12   resources/maildir/maildirresource.cpp
M  +6    -3    resources/maildir/maildirresource.h
M  +1    -1    resources/maildir/retrieveitemsjob.cpp

http://commits.kde.org/kdepim-runtime/044d1c55f09f41574d98cae1d1107651055fa7e2
Comment 4 András Manţia 2011-09-27 06:24:44 UTC
Git commit dd2619f53039f8d6a3b0dee0f37b6c89e5f2da44 by Andras Mantia.
Committed on 16/09/2011 at 10:15.
Pushed by amantia into branch 'KDE/4.7'.

Make the maildir resource more standard compliant:
- regarding file names (233379)
- moving out files from new to cur (233378)
- storing flags
- reading flags from filenames (252449)

BUG: 233380
BUG: 233378
BUG: 252449

M  +1    -1    resources/maildir/CMakeLists.txt
M  +1    -1    resources/maildir/libmaildir/CMakeLists.txt
M  +78   -3    resources/maildir/libmaildir/maildir.cpp
M  +12   -0    resources/maildir/libmaildir/maildir.h
M  +20   -2    resources/maildir/maildirresource.cpp
M  +6    -0    resources/maildir/retrieveitemsjob.cpp

http://commits.kde.org/kdepim-runtime/dd2619f53039f8d6a3b0dee0f37b6c89e5f2da44