Make the maildir resource more standard compliant: - regarding file names (233379) - moving out files from new to cur (233378) - storing flags - reading flags from filenames (252449)

BUG: 233380
BUG: 233378
BUG: 252449